added first block

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,27 @@
     <title>Ирокез</title>
 </head>
 <body>
+
+    <section class="header">
+        <div class="container">
+            <div class="header__wrapper">
+                <div class="header__item">
+                    <div class="header__title">
+                        Безупречность
+                        Уверенность
+                        Действие
+                    </div>
+                    <div class="header__subtitle">
+                        Охранный холдинг «Ирокез» успешно работает на рынке охранных услуг Алтайского края с 1997 года
+                    </div>
+                    <div class="button">Заказать консультацию</div>
+                </div>
+                <div class="header__item">
+                    <img src="">
+                </div>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
