added about block

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                     ЧОП «Ирокез-Охрана»<br>
                     ЧОП «АЛЕКС»
 
-                    <a href="" class="button button_service">23 года на рынке охраны!</a>
+                    <a href="" class="button button_dark">23 года на рынке охраны!</a>
                 </div>
 
                 <div class="service__item">
@@ -67,6 +67,44 @@
                 </div>
             </div>
         </div>
+    </section>
+
+
+    <section class="about">
+        <div class="container">
+            <div class="about__wrapper">
+                <div class="about__desc">
+                    <div class="title">Об охранном холдинге <span>«Ирокез»</span> </div>
+                    <p>
+                        В настоящее время охранная деятельность осуществляется в городах Барнауле и Бийске.
+                            <ul>
+                            <li>Штат сотрудников — 150</li>
+                            <li>Служебные, учебные и технические помещения — 550 м.кв.</li>
+                            <li>Автотранспорт — 8</li>
+                            <li>Оружие служебное — согласно нормоположенности</li>
+                            <li>КХО — 4</li>
+                            <li>Спортивно-тренировочный комплекс «Стрела» — 300 м.кв.</li>
+                        </ul>
+                        Всё в собственности. 
+                    </p>
+
+                    <p>
+                        <img src="img/altay-fair-medal.png">
+
+                        <span>Компания «Ирокез-Холдинг» награждена золотой медалью специализированной выставки «Безопасность ЭКСПО-2005» в номинации «Услуги в сфере безопасности».</span>
+                    </p>
+                    <a href="" class="button button_dark">Заказать консультацию</a>
+                </div>
+
+                <div class="about__img">
+                    <img src="img/about-irokez.png">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="facts">
+
     </section>
     
 </body>
