--- a/src/index.html
+++ b/src/index.html
@@ -104,8 +104,46 @@
     </section>
 
     <section class="facts">
-
+        <div class="container">
+            <div class="facts__wrapper">
+                <div class="facts__item">
+                    <div class="facts__item-title">
+                        <span class="facts__item-circle">1</span> Безупречность 
+                    </div>
+                    <div class="facts__item-text">
+                        Безупречность нашей работы подтвердят все наши партнёры.
+                    </div>
+                </div>
+                <div class="facts__item">
+                    <div class="facts__item-title">
+                        <span class="facts__item-circle">2</span> Уверенность 
+                    </div>
+                    <div class="facts__item-text">
+                        Уверенность и спокойствие — состояние всех наших клиентов.
+                    </div>
+                </div>
+                <div class="facts__item">
+                    <div class="facts__item-title">
+                        <span class="facts__item-circle">2</span> Действие 
+                    </div>
+                    <div class="facts__item-text">
+                        Действие там, где останавливаются наши коллеги: мы ускоряемся.
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+
+    <section class="cta">
+        <div class="container">
+                <div class="cta__title">
+                    В 99% случаев — монтируем оборудование и берём под охрану объекты СРАЗУ В ДЕНЬ ОБРАЩЕНИЯ!
+                </div>
+
+                <a href="" class="button button_white">Заказать консультацию</a>
+        </div>
+    </section>        
+    
     
 </body>
 </html>
