--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,19 @@
 </head>
 <body>
 
+    <nav class="nav">
+        <div class="wrapper">
+            <div class="logo"></div>
 
+            <ul>
+                <li><a href="" class="current">Главная</a></li>
+                <li><a href="">Наши услуги</a></li>
+                <li><a href="">О компании</a></li>
+                <li><a href="">Преимущества</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </div>
+    </nav>
 
     <section class="header">
         <div class="container">
@@ -190,5 +202,6 @@
         <p class="copy"> © 1997-2021 Охранный холдинг «Ирокез»</p>
     </div>
     
+    <script src="js/main.js"></script>
 </body>
 </html>
