--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
     <nav class="nav">
         <div class="wrapper">
-            <div class="logo "></div>
+            <a href="#home" class="logo "></a>
 
             <ul>
                 <li><a href="#home">Главная</a></li>
