--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,33 @@
     <nav class="nav">
         <div class="wrapper">
             <a href="#home" class="logo "></a>
+            <div  class="nav__main-menu">
+                <ul>
+                    <li><a href="#home">Главная!</a></li>
+                    <li><a href="#service">Наши услуги</a></li>
+                    <li><a href="#about">О компании</a></li>
+                    <li><a href="#facts">Преимущества</a></li>
+                    <li><a href="#footer">Контакты</a>
+                    <li><a href="tel:+79095073444" class="phone">8 (909) 507-34-44</a></li>
+                </ul>
+            </div>
 
-            <ul>
-                <li><a href="#home">Главная</a></li>
-                <li><a href="#service">Наши услуги</a></li>
-                <li><a href="#about">О компании</a></li>
-                <li><a href="#facts">Преимущества</a></li>
-                <li><a href="#footer">Контакты</a>
-                <li><a href="tel:+79095073444" class="phone">8 (909) 507-34-44</a></li>
-            </ul>
+
+            <div class="nav__hamburger-menu">
+                <input id="menu__toggle" type="checkbox" />
+                <label class="menu__btn" for="menu__toggle">
+                  <span></span>
+                </label>
+            
+                <a href="tel:+79095073444" class="phone">8 (909) 507-34-44</a>
+                <ul class="menu__box">
+                  <li><a class="menu__item" href="#home">Главная</a></li>
+                        <li><a class="menu__item" href="#service">Наши услуги</a></li>
+                        <li><a class="menu__item" href="#about">О компании</a></li>
+                        <li><a class="menu__item" href="#facts">Преимущества</a></li>
+                        <li><a class="menu__item" href="#footer">Контакты</a></li>
+                </ul>
+              </div>
 
             
         </div>
