updated nav scroll

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
             <a href="#home" class="logo "></a>
             <div  class="nav__main-menu">
                 <ul>
-                    <li><a href="#home">Главная!</a></li>
+                    <li><a href="#home">Главная</a></li>
                     <li><a href="#service">Наши услуги</a></li>
                     <li><a href="#about">О компании</a></li>
                     <li><a href="#facts">Преимущества</a></li>
@@ -245,7 +245,7 @@
     <div id="scroller">&uarr;</div>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/548444ec6b.js" crossorigin="anonymous"></script>
     <script src="js/jquery.validate.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
