updated footer links

--- a/src/index.html
+++ b/src/index.html
@@ -193,18 +193,18 @@
                     <img src="img/logo-bottom.png">
                     <p>
                         <span>Барнаул, улица Юрина, 208В</span><br>
-                        <a href="">8 (3852) 47‒82‒16</a><br>
-                        <a href="">8 (3852) 53‒90‒24</a><br>
-                        <a href="">8 (909) 507‒34‒44</a><br>
-                        <a href="" class="email">aleks29-1@mail.ru</a><br>
+                        <a href="tel:+73852478216">8 (3852) 47‒82‒16</a><br>
+                        <a href="tel+73852539024">8 (3852) 53‒90‒24</a><br>
+                        <a href="tel:+79095073444">8 (909) 507‒34‒44</a><br>
+                        <a href="mailto:aleks29-1@mail.ru" class="email">aleks29-1@mail.ru</a><br>
                     </p>
                     <p>    
                         <span>Бийск, переулок Гастелло, 6</span><br>
-                        <a href="">8 (902) 140‒61‒41</a><br>
-                        <a href="">8 (3854) 40‒12‒76</a><br>
-                        <a href="">8 (961) 992‒92‒46</a><br>
-                        <a href="">8 (909) 507‒34‒44</a><br>
-                        <a href="" class="email">irokez-holding@mail.ru </a><br>
+                        <a href="tel:+79021406141">8 (902) 140‒61‒41</a><br>
+                        <a href="tel:+73854401276">8 (3854) 40‒12‒76</a><br>
+                        <a href="tel:+79619929246">8 (961) 992‒92‒46</a><br>
+                        <a href="tel:+79095073444">8 (909) 507‒34‒44</a><br>
+                        <a href="mailto:irokez-holding@mail.ru" class="email">irokez-holding@mail.ru </a><br>
                     </p>
 
                 </div>
